--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,14 +8,14 @@
     "theme_color": "#566d15",
     "icons": [
         {
-            "src": "/logo.png",
+            "src": "/Products/logo.webp",
             "sizes": "192x192",
-            "type": "image/png"
+            "type": "image/webp"
         },
         {
-            "src": "/logo.png",
+            "src": "/Products/logo.webp",
             "sizes": "512x512",
-            "type": "image/png"
+            "type": "image/webp"
         }
     ]
 }
