--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "react-bootstrap": "^2.10.10",
         "react-dom": "^19.2.4",
         "react-helmet-async": "^2.0.4",
+        "react-hot-toast": "^2.6.0",
         "react-icons": "^5.5.0",
         "react-router-dom": "^6.22.3"
     },
