Config: Update base URL to Vercel deployment

--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 WORDPRESS_API_URL=https://cms.herbalicious-shop.com/graphql
-NEXT_PUBLIC_BASE_URL=https://herbalicious-shop.com
+NEXT_PUBLIC_BASE_URL=https://herbalicious-client.vercel.app
